trunk/Archive2/4c/e989f82c0a1f77/output
main.cpp: In function 'int main()':
main.cpp:6:36: error: conversion from 'const std::initializer_list<const int>' to non-scalar type 'std::initializer_list<int>' requested
     std::initializer_list<int> y = x;
                                    ^
